# Fames

./: .dir-locals.el  .ghci  .gitignore  .hspec-failuress  .nixpkgs  .stylish-haskell.yaml  .vimrc  Application.hs  FA.hs  Fames.cabal  Foundation.hs  Hackerspray.git  Model.hs  ModelField.hs  README.org  Role.hs  RoutePiece.hs  Settings.hs  TODO.org  TODOs.org  TODOs.org_archive  cabal.project  docker-compose.yml  errors.err  makefile  no-docker-compose.yml  package.yaml  planner.md  shell.nix  stack.yaml
Handler/: Administrator.hs  CsvUtils.hs  DC.hs  FA.hs  FAMES.hs  GLEnterReceiptSheet.hs  Items.hs  Login.hs  Table.hs  Util.hs  WH.hs
Handler/FA/: Def.hs
Handler/FAMES/: Def.hs
Handler/FAX/: Def.hs
Handler/GLEnterReceiptSheet/: ReceiptRow.hs
Handler/Items/: History.hs  Index.hs
Handler/WH/: Barcode.hs  PackingList.hs  StockAdjustment.hs  Stocktake.hs
Handler/WH/Legacy/: Box.hs
Import/: NoFoundation.hs
Util/: Cache.hs  EnumTree.hs  SameCons.hs
app/: Curl.hs  FAHttpClient.hs  FATransType.hs  GL.hs  Items.hs
app/Customers/: Settings.hs
app/GL/: FA.hs  Receipt.hs  TaxReport.hs  Utils.hs
app/GL/Check/: ItemCostSettings.hs
app/GL/Payroll/: Nest.hs  Parser.hs  Report.hs  Settings.hs  Timesheet.hs
app/GL/TaxReport/: Settings.hs  Types.hs
app/Items/: Internal.hs  SOP.hs  SharedStockAdjustment.hs  Types.hs
app/Planner/: Colour.hs  Internal.hs  Types.hs
app/WH/: Barcode.hs  FA.hs
app/WH/FA/: Curl.hs  Types.hs
app/WH/PackingList/: Internal.hs
bench-results/: all.csv  all.html
benchmarks/: BenchImport.hs  bench.hs
config/: dc-routes  dpd-template.csv  fa-models  fa-routes  fames-models  fames-routes  fax-models  fax-routes  keter.yml  models  routes  routes.gen  settings.yml  test-settings.yml
config/fa/: FAxx01.hs  FAxx04.hs  FAxx06.hs  FAxx08.hs  FAxx09.hs  FAxx10.hs  FAxx13.hs  FAxx14.hs  FAxx16.hs  FAxx17.hs  FAxx21.hs  FAxx23.hs  FAxx27.hs  FAxx28.hs  FAxx30.hs  FAxx31.hs  FAxx33.hs  FAxx35.hs  FAxx36.hs  FAxx43.hs  FAxx47.hs  FAxx48.hs  FAxx51.hs  FAxx53.hs  FAxx54.hs  FAxx55.hs  FAxx56.hs  FAxx59.hs  FAxx62.hs  FAxx63.hs  FAxx64.hs  FAxx65.hs  FAxx66.hs  FAxx67.hs  FAxx68.hs  FAxx70.hs  FAxx71.hs  FAxx73.hs  FAxx75.hs  FAxx76.hs  (+7 more)
config/tables/: xx01  xx02  xx03  xx06  xx07  xx08  xx09  xx12  xx14  xx15  xx16  xx18  xx19  xx24  xx28  xx30  xx31  xx32  xx33  xx34  xx35  xx37  xx39  xx42  xx44  xx46  xx47  xx48  xx49  xx52  xx53  xx55  xx60  xx61  xx62  xx64  xx66  xx70  xx72  xx73  (+14 more)
docker/: build.docker
fames-persist/: DC.hs  FA.hs  fames-persist.cabal  package.yaml
fames-persist/config/: dc-models
fames-persist/config/dc-tables/: dcx00  dcx01  dcx02  dcx03  dcx04  dcx05  dcx06  dcx07  dcx08  dcx09  dcx10  dcx100  dcx101  dcx102  dcx103  dcx104  dcx105  dcx106  dcx107  dcx108  dcx109  dcx11  dcx110  dcx111  dcx112  dcx113  dcx114  dcx115  dcx116  dcx117  dcx118  dcx119  dcx12  dcx120  (+283 more)
fames-persist/dc/: DC00.hs  DC01.hs  DC02.hs  DC03.hs  DC04.hs  DC05.hs  DC06.hs  DC07.hs  DC08.hs  DC09.hs  DC10.hs  DC100.hs  DC101.hs  DC102.hs  DC103.hs  DC104.hs  DC105.hs  DC106.hs  DC107.hs  DC108.hs  DC109.hs  DC11.hs  DC110.hs  DC111.hs  DC112.hs  DC113.hs  DC114.hs  DC115.hs  DC116.hs  DC117.hs  DC118.hs  DC119.hs  DC12.hs  DC120.hs  DC121.hs  DC122.hs  DC123.hs  DC124.hs  DC125.hs  DC126.hs  (+278 more)
fames-persist/fa/: FAxx00.hs  FAxx02.hs  FAxx03.hs  FAxx05.hs  FAxx07.hs  FAxx11.hs  FAxx12.hs  FAxx15.hs  FAxx18.hs  FAxx19.hs  FAxx20.hs  FAxx22.hs  FAxx24.hs  FAxx25.hs  FAxx26.hs  FAxx29.hs  FAxx32.hs  FAxx34.hs  FAxx37.hs  FAxx38.hs  FAxx39.hs  FAxx40.hs  FAxx41.hs  FAxx42.hs  FAxx44.hs  FAxx45.hs  FAxx46.hs  FAxx49.hs  FAxx50.hs  FAxx52.hs  FAxx57.hs  FAxx58.hs  FAxx60.hs  FAxx61.hs  FAxx68.hs  FAxx69.hs  FAxx72.hs  FAxx74.hs  FAxx78.hs  FAxx79.hs  (+12 more)
fay/: FFIExample.hs  Home.hs  ItemsIndex.hs  ItemsReport.hs  JQuery.hs  PlannerView.hs  WHStockAdjustment.hs  package.yaml  stack.yaml
fay-shared/: SharedStockAdjustment.hs
fay/WH/: Barcode.hs
legacy/: BankReconciliate.hs  bankReconciliate.hs
legacy/WarehousePlanner/: Base.hs  Csv.hs  Display.hs  Expr.hs  Optimum.hs  Rearrange.hs  Report.hs  ShelfOp.hs  SimilarBy.hs  Slices.hs  Type.hs
sql/: alter_mop.sql  alter_mop2.sql  alter_stocktake.sql  commerce.schema  drop.sql  federated_dc.sql  fix_item_summary.xrg  migration_history.sql  migration_match_batch.sql  operator.sql
src/: Application.hs  CategoryRule.hs  FAMES.hs  FAX.hs  Foundation.hs  Import.hs  Locker.hs  Model.hs  ModelField.hs  Role.hs  RoutePiece.hs  Settings.hs
src/Handler/: Administrator.hs  Bank.hs  Comment.hs  Common.hs  CsvUtils.hs  Customers.hs  DC.hs  Dashboard.hs  FA.hs  FAMES.hs  FAX.hs  Fay.hs  GL.hs  GLEnterReceiptSheet.hs  Home.hs  Items.hs  Planner.hs  Table.hs  Util.hs  VAT.hs  WH.hs
src/Import/: NoFoundation.hs
src/Model/: Boxtake.hs  DocumentKey.hs
src/Settings/: StaticFiles.hs
src/Util/: Cache.hs  Decimal.hs  EnumTree.hs  ForConduit.hs  SameCons.hs  Transformable.hs  ValidField.hs
src/devel/: DevelMain.hs  devel.hs
static/: datatables.js  fames.appcache
static/css/: bootstrap.css
templates/: default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  homepage.hamlet
templates/Items/: report-dnd.cassius  report-dnd.julius
templates/OldFay/: fay-runtime.julius  faygen-IMjMZ5h5.julius  faygen-LLGTVqVV.julius  faygen-PESIFw7q.julius  faygen-p4z67lcn.julius
templates/Planner/: doc.hamlet
test/: Main.hs  RoleSpec.hs  TestImport.hs
test/GL/: ReceiptProcessingSpec.hs
test/Handler/: AuthSpec.hs  CommentSpec.hs  CommonSpec.hs  FaSpec.hs  GLEnterReceiptSheetSpec.hs  HomeSpec.hs  ItemReportSpec.hs  WHBarcodeSpec.hs  WHPackingListSpec.hs  WHStockAdjustmentSpec.hs  WHStocktakeSpec.hs
test/Items/: CategorySpec.hs  InternalSpec.hs
test/Legacy/: BankReconciliateSpec.hs
test/Planner/: InternalSpec.hs  OptimumSpec.hs  RearrangeSpec.hs  WarehouseSpec.hs
test/Util/: CacheSpec.hs  DecimalSpec.hs
test/WH/: BarcodeSpec.hs
test/sql/: fa_test.sql
tools/: DPDDump.hs  DPDImport.hs  DPDLib.hs  FAGenerator.hs  Planner.hs  TextcartHelper.hs  create_federated.sh  create_views.sql
(+118 files in other folders)
