name:              Fames
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., fay-shared, app
                    -- for intero
                    , test 
    exposed-modules: Application
                     FA
                     FAX
                     GL.FA
                     GL
                     GL.Receipt
                     Role
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     SharedTypes
                     Handler.Administrator
                     Handler.Common
                     Handler.Fay
                     Handler.Home
                     Handler.Comment
                     Handler.GLEnterReceiptSheet
                     Handler.GLEnterReceiptSheet.ReceiptRow
                     Handler.WH
                     Handler.WH.Barcode
                     Handler.WH.Stocktake
                     Handler.FA
                     Handler.FAX
                     Handler.FA.Def
                     Handler.FAX.Def
                     Handler.Util
                     Handler.CsvUtils
                     WH.Barcode

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -w -fwarn-tabs -O0
    else
        ghc-options:   -w -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                PatternGuards
                PatternSynonyms
                StandaloneDeriving

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.17     && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , yesod-fay                     >= 0.7        && < 0.9
                 , fay                           >= 0.21.2.1   && < 0.24
                 , cassava                       >= 0.4.5      && < 0.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.6
                 , persistent-mysql              >= 2.1.2      && < 2.6
                 , mysql
                 , persistent-template           >= 2.0        && < 2.6
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.3
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.3
                 , data-default
                 , aeson                         >= 0.6        && < 0.12
                 , conduit                       >= 1.0        && < 2.0
                 , conduit-extra
                 , streaming-commons
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , case-insensitive
                 , wai
                 , blaze-html
                 , split
                 , cryptohash
                 , formatting
                 , temporary
                 , these
                 , Glob

executable         Fames
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, Fames

    ghc-options:       -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    -- ghc-options:       -Wall
    ghc-options:       -w

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , Fames
                 , yesod-test >= 1.5.0.1 && < 1.6
                 , yesod-core
                 , yesod
                 , yesod-auth
                 , persistent
                 , persistent-mysql
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , aeson
                 , cassava
                 , yaml
                 , temporary


executable FAGenerator
    if flag(dev)
        Buildable: True

    main-is: FAGenerator.hs
    hs-source-dirs: tools
    build-depends: base, mysql-simple, split, filepath, directory
    extensions: RecordWildCards


