cabal-version: 3.14
name:           Fames
version:        0.1.1
license:        MIT
build-type:     Simple

flag brick
  description: use brick for the warehouse plaanner
  manual: False
  default: True

flag dev
  description: Turn on development settings, like auto-reload templates.
  manual: False
  default: False

flag tools
  description: Build extra tools
  manual: False
  default: False


common deps
  build-depends:
      Decimal >=0.5.1
    , Glob
    , Metamorphosis >=0.1.0.1
    , aeson >=0.6
    , aeson-qq
    , base ^>= 4.20
    , blaze-html
    , blaze-markup
    , bytestring >=0.9
    , case-insensitive
    , cassava >=0.4.5
    , classy-prelude >=0.10.2
    , classy-prelude-conduit >=0.10.2
    , classy-prelude-yesod >=0.10.2
    , colour >=2.3.3
    , comonad
    , conduit >=1.0
    , conduit-extra
    , containers
    , cryptohash
    , curl >=1.3.8
    , data-default
    , diagrams-cairo >=1.4.0
    , diagrams-lib >=1.4.1.2
    , diagrams-svg >=1.4.0
    , directory >=1.1
    , fames-persist
    , fast-logger >=2.2
    , file-embed
    , filepath >=1.4.1.1
    , finite-typelits
    , formatting
    , ghc
    , ghc-compact
    , ghc-prim
    , gitrev >=0.1.3.1
    , hjsmin >=0.1
    , http-conduit >=2.1
    , http-types >=0.12.3
    , iso3166-country-codes
    , microlens >=0.4.1.1
    , microlens-th >=0.4.1.1
    , monad-control >=0.3
    , monad-logger >=0.3.0
    , mono-traversable
    , mtl >=2.2.0
    , mysql
    , mysql-simple
    , network >=3.1.1.1
    , one-liner >=1.0
    , palette >=0.3.0
    , parsec >=3.1.0
    , path-pieces >=0.2.0
    , persistent >=2.0
    , persistent-mysql >=2.1.2
    , persistent-template >=2.0
    , pointed >=5
    , pretty-simple
    , reducers >=3.12.0
    , regex-base
    , regex-compat-tdfa
    , regex-tdfa >=1.2.2
    , safe
    , semialign
    , shakespeare >=2.0.0
    , split
    , streaming-commons
    , tagged
    , tagsoup >=0.14.1
    , template-haskell
    , temporary
    , text >=0.11
    , these
    , these-lens
    , time
    , transformers >=0.6
    , unliftio
    , unordered-containers
    , vector
    , vector-sized
    , wai
    , wai-extra >=3.0.0
    , wai-logger >=2.2
    , warehouse-planner >=3.1.1
    , warp >=3.0
    , yaml >=0.8.0
    , yesod >=1.4.1
    , yesod-auth >=1.4.0 && <= 1.6.11.3
    , yesod-core >=1.4.17
    , yesod-form >=1.4.0
    , yesod-media-simple >=0.2.0.1
    , yesod-persistent >=1.6.0
    , yesod-static >=1.4.0.3 && < 1.6.1.1

common build
  default-extensions:
      BlockArguments
      DeriveDataTypeable
      EmptyDataDecls
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      MultiParamTypeClasses
      NamedWildCards
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      PartialTypeSignatures
      PatternGuards
      PatternSynonyms
      QuasiQuotes
      RankNTypes
      RecordWildCards
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      ViewPatterns
      MultiWayIf
      LambdaCase
  default-language: Haskell2010
  if (flag(dev))
    ghc-options: -Werror -Wincomplete-patterns -W -Wno-partial-type-signatures -Wno-type-defaults -Wno-missing-local-signatures -O0 -j6
    cpp-options: -DDEVELOPMENT
  else
    ghc-options: -W -fwarn-tabs -Wno-type-defaults -Wno-partial-type-signatures -O2 -j6

library
  import: deps, build
  hs-source-dirs:
      src
      legacy
      app
  exposed-modules:
      Application
      CategoryRule
      FAMES
      FAX
      Foundation
      Handler.Administrator
      Handler.Bank
      Handler.Common
      Handler.CsvUtils
      Handler.Customers
      Handler.Customers.DPD
      Handler.Customers.Invoices
      Handler.Customers.Lookup
      Handler.Customers.Map
      Handler.Customers.ShippingDetails
      Handler.Dashboard
      Handler.FA
      Handler.FA.Def
      Handler.FAMES
      Handler.FAMES.Def
      Handler.FAX
      Handler.FAX.Def
      Handler.GL
      Handler.GL.Check
      Handler.GL.Check.ItemCost
      Handler.GL.Check.ItemCost.Common
      Handler.GL.CheckAIS
      Handler.GL.GLEnterReceiptSheet
      Handler.GL.GLEnterReceiptSheet.ReceiptRow
      Handler.GL.Payroll
      Handler.GL.Payroll.Calendar
      Handler.GL.Payroll.Common
      Handler.GL.Payroll.Import
      Handler.GL.Payroll.Payroo
      Handler.GL.Payroll.QuickAdd
      Handler.GL.Payroll.Summary
      Handler.GL.TaxReport
      Handler.GL.TaxReport.Common
      Handler.GL.TaxReport.HMRC
      Handler.GL.TaxReport.Processor
      Handler.GL.TaxReport.Types
      Handler.GL.Tools
      Handler.Home
      Handler.Items
      Handler.Items.Batches
      Handler.Items.Batches.Matches
      Handler.Items.Category
      Handler.Items.Category.Cache
      Handler.Items.Common
      Handler.Items.History
      Handler.Items.Index
      Handler.Items.Report
      Handler.Items.Reports.Common
      Handler.Items.Reports.Forecast
      Handler.Items.Reports.NewForecast
      Handler.Planner
      Handler.Planner.Exec
      Handler.Planner.FamesImport
      Handler.Planner.View
      Handler.Table
      Handler.Util
      Handler.VAT
      Handler.WH
      Handler.WH.Barcode
      Handler.WH.Boxtake
      Handler.WH.Boxtake.Adjustment
      Handler.WH.Boxtake.Common
      Handler.WH.Boxtake.Upload
      Handler.WH.Dimensions
      Handler.WH.Location
      Handler.WH.PackingList
      Handler.WH.PLToPlanner
      Handler.WH.StockAdjustment
      Handler.WH.Stocktake
      Import
      Import.NoFoundation
      Locker
      Model
      Model.Boxtake
      Model.DocumentKey
      ModelField
      Role
      RoutePiece
      Settings
      Settings.StaticFiles
      Util.Cache
      Util.Decimal
      Util.EnumTree
      Util.ForConduit
      Util.SameCons
      Util.Transformable
      Util.ValidField
      BankReconciliate
      Curl
      Customers.Settings
      FATransType
      GL
      GL.Check.ItemCostSettings
      GL.FA
      GL.Payroll.Nest
      GL.Payroll.Parser
      GL.Payroll.Report
      GL.Payroll.Settings
      GL.Payroll.Timesheet
      GL.Receipt
      GL.TaxReport
      GL.TaxReport.Settings
      GL.TaxReport.Types
      GL.Utils
      Items
      Items.Internal
      Items.SharedStockAdjustment
      Items.Types
      WH.Barcode
      WH.FA
      WH.FA.Curl
      WH.FA.Types
      WH.PackingList.Internal

common tools
  hs-source-dirs:
      tools
  if flag(tools)
     buildable: True
  else
    buildable: False
executable DPDDump
  import: deps, build, tools
  main-is: DPDDump.hs
  other-modules:
      DPDLib

executable DPDImport
  import: deps, build, tools
  main-is: DPDImport.hs
  other-modules:
      DPDLib

executable FAGenerator
  import: deps, build, tools
  main-is: FAGenerator.hs

executable FPlanner
  import: build, deps
  main-is: Planner.hs
  if flag(brick)
     buildable: True
  else 
    buildable: False
  build-depends: Fames
  hs-source-dirs:
      tools
  ghc-options: -threaded -rtsopts

executable Fames
  import: deps, build
  main-is: main.hs
  build-depends: Fames
  other-modules:
      Curl
      Customers.Settings
      FATransType
      GL
      GL.Check.ItemCostSettings
      GL.FA
      GL.Payroll.Nest
      GL.Payroll.Parser
      GL.Payroll.Report
      GL.Payroll.Settings
      GL.Payroll.Timesheet
      GL.Receipt
      GL.TaxReport
      GL.TaxReport.Settings
      GL.TaxReport.Types
      GL.Utils
      Items
      Items.Internal
      Items.SharedStockAdjustment
      Items.Types
      WH.Barcode
      WH.FA
      WH.FA.Curl
      WH.FA.Types
      WH.PackingList.Internal
      Paths_Fames
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -j6

test-suite test
  import: deps, build
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      GL.Payroll.ParserSpec
      GL.Payroll.TimesheetSpec
      GL.Payroll.UtilsSpec
      GL.ReceiptProcessingSpec
      Handler.AuthSpec
      Handler.CommonSpec
      Handler.FaSpec
      Handler.GLEnterReceiptSheetSpec
      Handler.Items.BatchSpec
      Handler.WHBarcodeSpec
      Handler.WHBoxtake.AdjustementSpec
      Handler.WHBoxtake.UploadSpec
      Handler.WHPackingListSpec
      Handler.WHStockAdjustmentSpec
      Handler.WHStocktakeSpec
      Items.CategorySpec
      Items.InternalSpec
      Legacy.BankReconciliateSpec
      RoleSpec
      TestImport
      Util.CacheSpec
      Util.DecimalSpec
      WH.BarcodeSpec
      WH.PackingList.InternalSpec
      Paths_Fames
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N

benchmark bench
  import: deps, build
  type: exitcode-stdio-1.0
  main-is: bench.hs
  other-modules:
      BenchImport
      Paths_Fames
  hs-source-dirs:
      benchmarks
  ghc-options: -rtsopts -Wno-missing-exported-signatures
